# HiveEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  coding-standard.md  readme.md
.github/workflows/: main.yml
Cells/: CMakeLists.txt  create_module.sh
Cells/swarm/: CMakeLists.txt  README.md
Cells/swarm/include/swarm/: swarm.h
Cells/swarm/include/swarm/backend/vulkan/: graphicbackenddata.h  vkdevice.h  vkinstance.h  vkphysicaldevice.h  vksurface.h  vkswapchain.h
Cells/swarm/include/swarm/platform/linux/: platformhandle.h
Cells/swarm/src/swarm/: swarm.cpp
Cells/swarm/src/swarm/backend/vulkan/: swarmvk.cpp  vkdevice.cpp  vkinstance.cpp  vkphysicaldevice.cpp  vksurface.cpp  vkswapchain.cpp  vulkanloader.cpp
Cells/swarm/src/swarm/backend/vulkan/platform/linux/: vksurface.linux.cpp  vksurface.linux.wayland.cpp  vksurface.linux.x11.cpp
Hive/: CMakeLists.txt
HiveEngine/: CMakeLists.txt
HiveEngine/dep/stb_image/: stb_image.h
HiveEngine/src/: hvpch.h  lypch.h
HiveEngine/src/Core/: Clock.cpp  Clock.h  Color.h  Platform.h  Shape.h  Vector.h
HiveEngine/src/Core/Logger/: ConsoleSink.cpp  ConsoleSink.h  Logger.cpp  Logger.h
HiveEngine/src/Core/WIndow/: Window.h
HiveEngine/src/Debug/: Asserts.cpp  Asserts.h  Profiler.cpp  Profiler.h
HiveEngine/src/Engine/: Application.cpp  Application.h  ConsoleLogger.cpp  ConsoleLogger.h  Engine.cpp  Engine.h  Entry.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h  Window.h  WindowConfiguration.cpp  WindowConfiguration.h  WindowFactory.cpp
HiveEngine/src/GUI/: GuiAPI.cpp  GuiAPI.h  GuiContext.h  GuiRenderCommand.h  GuiType.h
HiveEngine/src/Platform/Windows/: win64_platform.cpp  win64_window.cpp
HiveEngine/src/Platform/linux/: ConsoleLoggerLinux.cpp
HiveEngine/src/Platform/raylib/: WindowRaylib.cpp  WindowRaylib.h
HiveEngine/src/Platform/windows/: ConsoleLoggerWindows.cpp
HiveEngine/src/Rendering/: Camera2D.h  Camera3D.cpp  Camera3D.h  Mesh.cpp  Mesh.h  RenderCommand.cpp  RenderCommand.h  RenderTexture.cpp  RenderTexture.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  Texture.h
HiveEngine/src/Ressource/: Memory.cpp  Memory.h  StackAllocator.cpp  StackAllocator.h
HiveEngine/src/core/: Application.cpp  Application.h  Logger.cpp  Logger.h  RessourceManager.h  mouse.cpp  mouse.h  object.h  timestep.h  uuid.h  window.h
HiveEngine/src/core/Debug/: Asserts.cpp  Asserts.h  Profiler.h
HiveEngine/src/core/Event/: Event.h  EventVisitor.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h
HiveEngine/src/core/Event/Service/: BufferedEventService.cpp  BufferedEventService.h  IEventService.cpp  IEventService.h
HiveEngine/src/core/Input/: Input.cpp  Input.h
HiveEngine/src/core/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.h  LoggerFactory.h
HiveEngine/src/core/Math/: MathType.h
HiveEngine/src/core/Memory/: Memory.cpp  Memory.h
HiveEngine/src/core/Message/: BufferedMessageService.cpp  BufferedMessageService.h  IMessageService.h
HiveEngine/src/core/Profiling/: profiler.cpp  profiler.h  profiler_colors.cpp  profiler_colors.h
HiveEngine/src/core/Rendering/: Camera.cpp  Camera.h  Camera2D.cpp  Camera2D.h  Camera3D.h  Mesh.cpp  Mesh.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h
HiveEngine/src/core/Windowing/: Window.h  WindowConfiguration.h  WindowFactory.cpp  WindowFactory.h  WindowManager.h
HiveEngine/src/core/events/: event.cpp  event.h  event_bus.cpp  key_event.h  mouse_event.h  real_node_example.h  window_event.h
HiveEngine/src/core/inputs/: input.cpp  input.h  input_manager.h
HiveEngine/src/core/logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  Logger.cpp  Logger.h  LoggingFactory.cpp  LoggingFactory.h
HiveEngine/src/core/rendering/: IndexBuffer.cpp  RenderAPI.h  RenderCommand.h  Renderer.cpp  Renderer.hpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp  shader.h
HiveEngine/src/core/window/: window.h  window_configuration.cpp  window_configuration.h  window_factory.cpp  window_factory.h
HiveEngine/src/ecs/: Component_Registry.h  EcsWorld.cpp  EcsWorld.h
HiveEngine/src/platform/glfw/: glfw_window.cpp  glfw_window.h  window_glfw.cpp
HiveEngine/src/platform/glfw/inputs/: glfw_input_manager.cpp  glfw_input_manager.h
HiveEngine/src/platform/linux/: ConsoleLoggerLinux.cpp  linux_console_logger.cpp
HiveEngine/src/platform/opengl/: OpenGlRenderAPI.cpp  OpenGlRenderAPI.h  OpenGlTexture2D.cpp  opengl_shader.cpp  opengl_shader.h
HiveEngine/src/platform/raylib/: WindowRaylib.cpp  WindowRaylib.h
HiveEngine/src/platform/windows/: main.cpp
HiveEngine/src/rendering/: GraphicsDevice.h  GraphicsType.h  RenderType.h  ShaderLayout.h
HiveEngine/src/rendering/vulkan/: GraphicsDeviceVulkan.cpp  GraphicsDeviceVulkan.h  VkRenderer.cpp  VkRenderer.h  vulkan_buffer.cpp  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_ressource_manager.cpp  vulkan_ressource_manager.h  vulkan_types.h
HiveEngine/src/scene/: components.h  entity.cpp  entity.h  scene.cpp  scene.h
LypoEngine/assets/shaders/: textureShader.vert.glsl
LypoEngine/src/core/: mouse.cpp  mouse.h  window.cpp  window.h
LypoEngine/src/core/events/: Event.h  KeyEvent.h  MouseEvent.h  event.cpp  event.h  event_bus.cpp  event_bus.h  key_event.h  mouse_event.h  real_node_example.h  window_event.h
LypoEngine/src/core/inputs/: glfw_input_manager.cpp  glfw_input_manager.h  input_manager.h  inputs.h
LypoEngine/src/core/layers/: EventBus.cpp  EventBus.h  tree.cpp  tree.h
LypoEngine/src/core/rendering/: IndexBuffer.cpp  Texture.cpp  Texture.h
LypoEngine/src/platform/glfw/: glfw_mouse.cpp  glfw_mouse.h  (+2 more)
Sandbox/: CMakeLists.txt  main.cpp
Sandbox/demo_application/: application.cpp
Sandbox/demo_asserts/: main.cpp
Sandbox/demo_logging/: main.cpp
Sandbox/demo_memory/: main.cpp
Sandbox/demo_profilling/: main.cpp
Sandbox/demo_renderer3d/: main.cpp  results.json
Sandbox/demo_stack_allocator/: main.cpp
Sandbox/demo_window/: main.cpp
Testbed/src/: main.cpp
(+12 files in other folders)
